--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,7 @@
 
 en:
   hello: "Hello world"
+  company:
+    invalid_zip_code: 'Zip Code is invalid.'
+    invalid_email: 'Only getmainstreet.com domain emails are allowed.'
+
