--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,7 +31,11 @@
 
 en:
   hello: "Hello world"
+  error: "Something went wrong"
+  saved: "Saved"
+  changes_saved: "Changes Saved"
   company:
     invalid_zip_code: 'Zip Code is invalid.'
     invalid_email: 'Only getmainstreet.com domain emails are allowed.'
+    successfully_deleted: "%{name} has been succesfully deleted"
 
